[tool.poetry]
name = "pypropel"
version = "0.1.7"
description = "Processing protein data for bioinformatics analysis"
authors = ["Jianfeng Sun <jianfeng.sunmt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
biopython = ">=1.81"
seaborn = ">=0.12.0"
matplotlib = ">=3.7.0"
scikit-learn = ">=1.3.0"
mini3di = ">=0.2.0"
click = ">=8.0.0"
typing_extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
pypropel_struct_check_cplx = "pypropel.prot.structure.distance.isite.check.Complex:cli"
pypropel_struct_dist_cplx1 = "pypropel.prot.structure.distance.isite.DistanceComplexOne:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W"]
ignore = ["E501"]  # Disable F401 (unused imports) and I001 for now

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

